--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "rechart": "^0.0.1"
+    "recharts": "^2.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
